app/assets/stylesheets/angular/clients.css.scss
@import '../shared/constants';
@import '../shared/utilities';

$client-form-nav-width: 250px;
$client-form-nav-padding: 50px;

.client-form {
  @include respond-to(widescreens) {
    padding-top: 20px;
    padding-left: $client-form-nav-width;
  }

  label.changed {
    background: $light-green;
    @include border-radius(5px);
  }

  .form-nav {
    @include transition();

    display: none;
    width: $client-form-nav-width - 5px;
    vertical-align: top;

    @include respond-to(widescreens) {
      display: inline-block;
      margin-left: -$client-form-nav-width;
    }

    .nav-container {
      $nav-heading-height: 32px;
      $nav-heading-margin: 6px;

      height: 100%;
      @include box-sizing(border-box);
      padding-bottom: 56px + 60px + $nav-heading-height + $nav-heading-margin; // covers the toolbar and a bit of padding

      .nav-box {
        height: 100%;
        padding-top: $nav-heading-height + $nav-heading-margin;

        .nav-heading {
          margin-top: -$nav-heading-height;
        }

        .nav-list {
          height: 100%;
          overflow-y: auto;
          font-size: 90%;

          li.changed {
            background: $light-green;
            color: white;
          }
        }
      }
    }
  }

  .edit-description {
    margin-bottom: 30px;

    .description {
      font-size: 120%;
      color: #666;
      margin-top: 4px;
    }
  }

  .well.changed, .changed .well {
    background: $light-green;
  }

  .changed {
    .changed {
      background: darken($light-green, 10%);
    }
  }

  .transitionOn {
    @include transition();
  }

  .subsection {
    padding: 0px -20px;
    height: 72px;

    .slider {
      position: relative;
      padding: 20px;
      margin-bottom: -52px;
      height: 32px;

      -webkit-transform-origin: 50% 0%;
      -moz-transform-origin: 50% 0%;
      -ms-transform-origin: 50% 0%;
      -o-transform-origin: 50% 0%;
      transform-origin: 50% 0%;
    }

    .subsection-outer {
      height: 32px;
      position: relative;
      padding: 0px 20px;

      .subsection-inner {
        position: relative;
        width: 100%;
        overflow: hidden;
        display: none;

        .subsection-contents {
        }
      }
    }
  }

  .data-table {
    background-color: $light-gray;
    @include ng-scope-hover();
  }
}

.section-edit {
  @include respond-to(widescreens) { width: 175px; }
  @include respond-to(desktops) { width: 175px; }
}

.form-content {
  @include transition();
  @include box-sizing();

  width: 100%;
  display: inline-block;

  @include respond-to(handhelds) {
    button {
      display: inline-block;
    }
  }

  @include respond-to(widescreens) {
    padding-left: $client-form-nav-padding;
  }
}

.search-client-form {
  $search-client-form-nav-width: 350px;
  $search-client-form-nav-padding: 50px;

  @extend .client-form;

  @include respond-to(widescreens) {
    padding-left: $search-client-form-nav-width + $search-client-form-nav-padding + 10px;
  }

  .form-nav {
    width: 100%;
    display: inline-block;

    @include respond-to(widescreens) {
      margin-left: -($search-client-form-nav-width + $search-client-form-nav-padding + 10px);
      width: $search-client-form-nav-width;
      padding-right: $search-client-form-nav-padding;
    }
  }
}

#toolbar {
  position: fixed;

  bottom: 0;
  right: 0;
  left: $nav-width-desktops;
  @include transform(0, 0);

  z-index: 1002;
  background: #eee;
  color: #666;
  text-align: right;
  padding: 10px 0;
  border-top: 1px solid #ddd;

  .pure-button {
    margin: 0 0 0 10px;
    vertical-align: top;
  }

  @include respond-to(handhelds) {
    button {
      display: inline-block;
    }

    left: 0;
    &.active {
      @include transform($nav-width-handhelds, 0);
    }
  }

  @include respond-to(tablets) {
    left: 0;
    &.active {
      @include transform($nav-width-tablets, 0);
    }
  }
}

.search-controls {
  $search-height: 32px;
  $search-button-width: 55px;

  height: $search-height;

  input {
    display: inline-block !important; // Override pure setting this in an @media query.
    height: $search-height;
    width: 50%;
    min-width: 150px;
  }

  button#btnSearch {
    margin-left: -$search-button-width;
    width: $search-button-width;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    height: $search-height;
    display: inline-block;
    vertical-align: top;
  }
}

//.client-search {
//  @include transition();
//
//  width: 100%;
//  display: inline-block;
//
//  .search {
//    $search-button-width: 55px;
//
//    padding: 20px;
//    text-align: right;
//    margin-bottom: 20px;
//
//    .search-controls {
//      $search-height: 30px;
//
//      height: $search-height;
//
//      input {
//        vertical-align: top;
//        height: $search-height;
//        width: 100%;
//        margin-bottom: 0;
//      }
//
//      button#btnSearch {
//        margin-top: -$search-height;
//        vertical-align: top;
//        width: $search-button-width;
//        border-top-left-radius: 0;
//        border-bottom-left-radius: 0;
//        height: $search-height;
//        display: inline-block;
//      }
//    }
//
//    .advanced-search {
//      @include transition();
//
//      margin-top: 10px;
//      text-align: right;
//      position: relative;
//      height: 16px;
//      overflow: hidden;
//
//      &.active {
//        height: 190px;
//      }
//
//      .advanced-search-inner {
//        position: absolute;
//        bottom: 0;
//        right: 0;
//        left: 0;
//
//        .advanced-search-fields {
//          $advanced-search-label-width: 80px;
//
//          margin-bottom: 15px;
//          display: table;
//          width: 100%;
//          border-spacing: 4px;
//
//          .advanced-search-field {
//            margin: 10px 0;
//            display: table-row;
//
//            * {
//              margin: 4px;
//            }
//
//            label {
//              display: table-cell;
//              width: $advanced-search-label-width;
//              margin-right: 5px;
//            }
//
//            input {
//              display: table-cell;
//              width: 100%;
//            }
//          }
//        }
//      }
//    }
//  }
//}

.client-show {
  padding-top: 20px;

  .client-info {
    margin-bottom: 30px;

    .client-buttons {
      position: absolute;
      bottom: 0;
      right: 0;
    }

    .value {
      vertical-align: middle;
    }

    @include respond-to(widescreens) {
      width: 100%;
      float: left;
    }

    @include respond-to(handhelds) {
      .desc {
        display: none;
      }
    }
  }

  .client-docs {
    margin-bottom: 30px;
    @include respond-to(widescreens) {
      width: 100%;
      float: left;
    }

    .paginator {
      text-align: right;
      .pure-paginator {
        margin-top: 20px;
      }
      .pure-button {
        background-color: transparent;
      }
    }
  }
}

.clients-table {
  word-wrap: break-word;

  .name {
  }

  .company {
    width: 30%;
  }

  .actions {
    width: 50px;
    text-align: center;
  }

  #loading {
    border-top: 1px solid #cbc;
    text-align: center;
  }

  tr th i {
    color: #666;
  }

  .bold {
    font-weight: 900;
  }

  .regular {
    font-weight: 500;
  }

  @include ng-scope-hover();
}

.history-table {
  .description {
    padding-right: 10px;
    width: auto;
    @include respond-to(tablets, handhelds) {
      width: 100%;
    }
  }

  .detail {
    font-size: 80%;
    margin-top: 3px;

    .date {
      color: #999;
    }
  }

  @include ng-scope-hover();
}

.documents-table {
  @extend .history-table;
}

.client-landing {
  .recent-edit {
  //TODO:  We should switch to pure's grid system.
    @include respond-to(widescreens) {
      width: 47.5%;
      float: right;
      margin-left: 2.5%;
    }
  }

  .recent-client {
    margin-bottom: 30px;
    @include respond-to(widescreens) {
      width: 47.5%;
      float: left;
      margin-right: 2.5%;
    }
  }
}

#coverageScheduleForm {
  select {
    width: 100%;
  }

  > * {
    @include box-sizing(border-box);
    padding: 20px;
  }

  @include respond-to(desktops, widescreens) {
    input[type="text"], input[type="currency"] {
      display: table-row;
      width: 100%;
    }
    label {
      display: table-row;
      text-align: left;
    }
    .checkbox-container {
      display: table-row;
      width: 100%;
    }
  }
}

